[project]
name = "python-google-adk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arcadepy>=1.10.0",
    "google-adk>=1.22.1",
    "litellm>=1.81.0",
    "rich>=14.2.0",
    "authlib>=1.6.6",
    "pyasn1>=0.6.2",
    "starlette>=0.49.1",
    "protobuf>=6.33.5",
    "python-multipart>=0.0.22",
    "urllib3>=2.6.3",
]